--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,8 @@ resources:
     name: bernardopacini/.azure
     endpoint: bernardopacini
 
-jobs: 
+jobs:
   - template: azure_template.yaml@azure_template
     parameters:
       REPO_NAME: ${{ variables.REPO_NAME }}
+      COMPLEX: true
