--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ extends:
     INTEL_CONFIG: config/defaults/config.LINUX_INTEL.mk
     INPUT_FILES: false
     STYLE_CHECK: true
+    STEPS_MAKE: make
  
 
 
