--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,8 @@ extends:
     INTEL_CONFIG: config/defaults/config.LINUX_INTEL.mk
     INPUT_FILES: false
     STYLE_CHECK: true
-    STEPS_MAKE: make
+    STEPS_MAKE: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd ${{ variables.DOCKER_WORKING_DIR }} && make"
+
  
 
 
